# 1000x-rps-server

./: .env.example  .gitignore  .python-version  Dockerfile  GEMINI.md  README.md  docker-compose.yml  kafka_worker.py  locustfile.py  main.py  pyproject.toml
benchmarks/: README.md  benchmark_stats_2026-01-11-22-26-00.json.example  results_1000u_stats_history.csv  results_100u_stats.csv  run_benchmark.py
benchmarks/v1/: results_1000u_failures.csv  results_1000u_stats.csv  results_100u_stats_history.csv  results_10u_stats.csv  results_10u_stats_history.csv
benchmarks/v2/: results_1000u_failures.csv  results_1000u_stats.csv  results_1000u_stats_history.csv  results_100u_stats.csv  results_100u_stats_history.csv  results_10u_stats.csv  results_10u_stats_history.csv
benchmarks/v3/: results_1000u_failures.csv  results_1000u_stats.csv  results_1000u_stats_history.csv  results_100u_stats.csv  results_100u_stats_history.csv  results_10u_stats.csv  results_10u_stats_history.csv
benchmarks/v4/: results_1000u_failures.csv  results_1000u_stats.csv  results_1000u_stats_history.csv  results_100u_stats.csv  results_100u_stats_history.csv  results_10u_stats.csv  results_10u_stats_history.csv
core/: config.py  kafka.py  security.py
monitoring/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboard.json
tests/: test_e2e_gift_code.py  test_kafka.py  test_performance_100x.py  test_queue_concurrency.py  test_rate_limiter.py
